# pseudocode

./: .envrc  LICENSE  README.md  flake.nix  pyproject.toml
examples/: do_addition.py  download_titanic_dataset.py  get_github_issues.py
openai_pseudo_code/: __init__.py
pseudocode/: __init__.py
tests/: test_simple.py
